examples/test/testpolicy5891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5891
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key37: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value40
          key27: value15
          key16: value10
      podSelector:
        matchLabels:
          key43: value29
